catalog-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service # Назва Service (буде DNS-іменем всередині кластера)
  labels:
    app: product-catalog-service
spec:
  type: ClusterIP
  selector:
    app: product-catalog-service # Service направляє трафік на Pod'и з цією міткою
  ports:
    - protocol: TCP
      port: 80 # Порт, на якому Service слухає всередині кластера
      targetPort: 8000 # Порт контейнера, на який перенаправляється трафік
